added portractor to script in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gigfinder",
   "private": true,
   "scripts": {
-    "start": "gulp serve"
+    "start": "gulp serve",
+	"protractor": "gulp watch"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
