--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gigfinder",
   "private": true,
+  "main": "start.js",
   "scripts": {
     "start": "node server.js",
     "protractor": "node testServer.js"
