--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gigfinder",
   "private": true,
-  "version": "6.11.2",
+  "version": "^6.11.2",
   "scripts": {
     "start": "node server.js",
     "protractor": "node testServer.js"
