--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "open": "0.0.5",
     "rimraf": "^2.4.0",
     "run-sequence": "^1.1.1",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "grunt":"^1.0.4",
+    "grunt-cli": "^1.3.2"
   },
   "engines": {
     "node": ">=0.10.0"
